기본 스타일 및 변수 선언

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
-body{
-  background-color: darkblue;
-  color: white;
-}
+@import "https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css";
+@import "https://necolas.github.io/normalize.css/8.0.1/normalize.css";
+@import "./variable";
+@import "./default";
+@import "./layout";
