헤더 마크업 및 디자인 완성

--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -13,4 +13,5 @@
   $primary-color4: rgba(182, 140, 112, 0.08);
   $primary-border-color: rgba(255, 252, 249, 0.5);
   $season-border-color: rgba(163, 155, 86, 0.5);
+  $header-border-color: rgba(#FFFCF9, 0.5);
   $text-normal: 1.6rem;
