--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,15 +1,15 @@
 @import "./mixin";
 
-//헤더 컨테이너
+// 헤더 컨테이너
 .header-container{
-  border-bottom: 1px solid  $header-border-color;
+  border-bottom: 1px solid $header-border-color;
 }
-//헤더
+// 헤더
 .header{
   height: 80px;
   @include flexbox($ma:space-between);
 
-  //로고
+  // 로고
   &__logo{
     width: 100px;
     height: 40px;
@@ -22,7 +22,7 @@
     }
   }
 
-  //회원가입 및 로그인 링크
+  // 회원가입 및 로그인 링크
   &__member-list{
     order: -1;
     @include flexbox();
@@ -35,7 +35,7 @@
     }
   }
 
-  //검색폼
+  // 검식 폼
   .search{
     @include flexbox();
     border-bottom: 1px solid $header-border-color;
@@ -43,9 +43,9 @@
       color: inherit;
       width: 200px;
       height: 40px;
-      padding:1em;
       border: 0;
-      background-color:transparent;
+      padding-left: 1em;
+      background-color: transparent;
     }
     input:focus{
       outline: 0;
@@ -54,7 +54,7 @@
       button{
         @include buttonNone();
       }
-      button:focus {
+      button:focus{
         outline: 0;
       }
       button:focus-visible {
@@ -63,8 +63,9 @@
       .ir{
         cursor: pointer;
         @include boxSize(40px, 40px);
-        background:url(./../images/icon-search.svg) no-repeat 0 0 / 100% 100%;
+        background: url(./../images/icon-search.svg) no-repeat 0 0 / 100% 100%;
       }
     }
   }
 }
+
